micros-homeworks/13-kuberuse-03-config/kube_manifests/tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: web
          configMap:
            name: nginx
            items:
              - key: "index.html"
                path: "index.html"
        - name: config
          configMap:
            name: nginx
            items:
              - key: "https.conf"
                path: "https.conf"
        - name: tls
          secret:
            secretName: tls-secret
      containers:
        - name: nginx
          image: nginx:1.14.2
          volumeMounts:
            - name: web
              mountPath: "/var/www/tls1.3"
              readOnly: true
            - name: config
              mountPath: "/etc/nginx/conf.d/"
              readOnly: true
            - name: tls
              readOnly: true
              mountPath: "/etc/nginx/ssl/"
