micros-homeworks/13-kuberuse-03-config/kube_manifests/tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      protocol: TCP
      name: http
